<resources>
    <string name="app_name">Trabalho de Android</string>
    <string name="ra">Ra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dtNasc">Dt. Nascimento</string>
    <string name="dtMatricula">Dt. Matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>
    <string name="selecioneCurso">Selecione o Curso</string>
    <string name="selecionePeriodo">Selecione o Período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="edNomeDisciplina">Nome da Disciplina</string>
    <string name="cadastro_de_alunos">Cadastro de Alunos</string>
    <string name="cadastro_de_disciplinas">Cadastro de Disciplinas</string>
    <string name="nomeProfessor">Nome do Professor</string>
    <string name="cadastro_de_professores">Cadastro de Professores</string>
    <string name="descricaoTurma">Descrição da Turma</string>
    <string name="regimeTurma">Regime da Turma</string>
    <string name="periodoTurma">Período da Turma</string>
    <string name="edProfessor">Professor</string>
    <string name="turma">Turma</string>
    <string name="cadastro_de_turma">Cadastro de Turmas</string>
    <string name="selecioneTurma">Selecione a Turma</string>
    <string name="selecioneDisciplina">Selecione a Disciplina</string>
    <string name="selecioneProfessor">Selecione o Professor</string>
    <string name="selecioneAluno">Selecione o Aluno</string>
    <string name="cadastro_de_turma_disciplina">Cadastro de Disciplina na Turma</string>
    <string name="cadastro_de_turma_aluno">Cadastro de Aluno na Turma</string>
    <string name="edNomeAluno">Nome do Aluno</string>
    <string name="lancarNotaFrequencia">Lançar Notas e Frequências</string>
    <string name="lancarFrequencias">Lançar Frequências</string>
    <string name="edNota">Nota</string>
    <string name="edFrequencia">Frequência</string>
    <string name="situacao">Situação</string>
</resources>