<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/lnPrincipal"
        tools:context=".CadastroTurmaAlunoActivity">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spTurma"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_floatingLabelText="@string/turma"
            app:ms_hint="@string/selecioneTurma"
            app:ms_multiline="false"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spAluno"
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:ms_arrowColor="?attr/colorPrimary"
                app:ms_floatingLabelText="@string/edNomeAluno"
                app:ms_hint="@string/selecioneAluno"
                app:ms_multiline="false" />

            <ImageButton
                android:layout_width="70dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="button_icon_desc"
                android:layout_gravity="center_vertical"
                android:onClick="AddAluno"
                android:src="@drawable/ic_add" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/rvListaTurmaAlunos"/>


    </LinearLayout>
</ScrollView>